@@ -1,0 +1,5 @@
+#!/usr/bin/python
+
+import sys
+
+sys.exit(0)
